add params to router with three example of products

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -80,15 +80,15 @@
   },
   "product": {
     "1": {
-      "name": "المنتج الأول",
+      "name": "كركديه",
       "desc": "هذا نص عربي تجريبي يصف المنتج الأول."
     },
     "2": {
-      "name": "المنتج الثاني",
+      "name": "شاي أخضر",
       "desc": "هذا نص عربي تجريبي يصف المنتج الثاني."
     },
     "3": {
-      "name": "المنتج الثالث",
+      "name": "نعنع",
       "desc": "هذا نص عربي تجريبي يصف المنتج الثالث."
     },
     "4": {
@@ -114,6 +114,27 @@
       "location": "طوكيو، اليابان"
     }
   },
+  "studyData": [
+    {
+      "ResearchersStudy": "رئيس الجمعية الدولية للغذاء الصافي (الطبيعي) مقرها في باريس",
+      "ResearchersName": "Dr. A. Lenglet",
+      "desc": "الملاحظة الأكثر بروزاً بالنسبة لتأثير المتة على الأعضاء الطبيعية هي أنها تعمل مباشرة مع مجموعة النظام العصبي والعقل – النخاع الشوكي.إن شرب المته أثناء الصباح قبل الإفطار مع قليل من السكر تعطي شعور حيوي بالراحة، وتزيد من المقاومة اتجاه التعب وتنشط الحياة الدماغية. تعتبر المتة واحدة من أهم المشروبات ويمكن أن تكون الوحيدة من بين الوسائل الطبيعية التي يملكها الإنسان من أجل الاستفادة الأعظمية من طاقتها الدفينة حيث يمكننا مقارنتها كمدخر للطاقة"
+    },
+    {
+      "ResearchersStudy": "من جامعة باريس",
+      "ResearchersName": "Dr. M. Thévenard",
+      "desc": "تحتوي المتة على قلويات والتي من خلال مظهرها وتعاملها الفوري مع مبادئ الأعضاء فإنها عنصر مغذي هام بحيث يعيد النشاط العام للجسم. تعتبر من خلال تركيبها الخاص من الناحية الصحية متفوقة لأنها تحتوي على القليل من الزيوت التي تتواجد بشكل رئيسي في المشروبات المماثلة الأخرى والتي لا تسبب الأرق كما أنها مساعدة على الهضم.الشكر لمحاسنها المقوية والمنشطة ولخلوها من الضرر، فإن القائمين على الصحة يعتبرون أن المتة مشروب من خلال صفاتها الجيدة قادرة على مواجهة المشروبات الكحولية"
+    },
+    {
+      "ResearchersStudy": "بحث منشور في Presse Medical",
+      "ResearchersName": "Dr. J. Sehunk de Goldfian",
+      "desc": "يمكننا الاستنتاج بأن المتة تعتبر منشط عام (من أصل نباتي)، بالإضافة إلى أنها مقو عام، وتستخدم لعلاج داء الحفر، ومقو للقلب، والأوعية والنخاع الشوكي.تعمل المتة أيضاً كمخدر خفيف للطبقة المخاطية الهضمية، تقلل من الشعور بالجوع، وتقوي الألياف المسطحة الموجودة في جدران الأمعاء.هذا بالإضافة إلى أنها مضاد حيوي عام، ويساعد على التئام الجروح، ومضاد للتخمة، ومضاد للحمى، ومضاد للجراثيم."
+    }
+  ],
+  "ReadMore": "قراءة المزيد",
+  "SeeMore": "قراءة المزيد",
+  "OurProductsTitle" : "منتجاتنا",
+  "EventsTitle" : "فعاليات",
   "siteMap": {
     "title": "خريطة الموقع",
     "about.yerbaMate": "عن المتة",
