add image for testing and solve error for change language

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -93,7 +93,11 @@
       "desc": "هذا نص عربي تجريبي يصف المنتج الثالث."
     },
     "4": {
-      "name": "المنتج الرابع",
+      "name": "يانسون",
+      "desc": "هذا نص عربي تجريبي يصف المنتج الرابع."
+    },
+    "5": {
+      "name": "ورد جوري",
       "desc": "هذا نص عربي تجريبي يصف المنتج الرابع."
     }
   },
