--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -93,7 +93,11 @@
       "desc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum."
     },
     "4": {
-      "name": "Product Four",
+      "name": "Anise",
+      "desc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum."
+    },
+    "5": {
+      "name": "Jouri Flowers",
       "desc": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum."
     }
   },
