add mate images for testing

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -81,22 +81,38 @@
   },
   "product": {
     "1": {
-      "name": "كركديه",
+      "name": "خارطة خضراء",
       "desc": "هذا نص عربي تجريبي يصف المنتج الأول."
     },
     "2": {
-      "name": "شاي أخضر",
+      "name": "خارطة بيضاء",
       "desc": "هذا نص عربي تجريبي يصف المنتج الثاني."
     },
     "3": {
-      "name": "نعنع",
+      "name": "ترغواي",
       "desc": "هذا نص عربي تجريبي يصف المنتج الثالث."
     },
     "4": {
-      "name": "يانسون",
+      "name": "أماندا",
       "desc": "هذا نص عربي تجريبي يصف المنتج الرابع."
     },
     "5": {
+      "name": "كركديه",
+      "desc": "هذا نص عربي تجريبي يصف المنتج الأول."
+    },
+    "6": {
+      "name": "شاي أخضر",
+      "desc": "هذا نص عربي تجريبي يصف المنتج الثاني."
+    },
+    "7": {
+      "name": "نعنع",
+      "desc": "هذا نص عربي تجريبي يصف المنتج الثالث."
+    },
+    "8": {
+      "name": "يانسون",
+      "desc": "هذا نص عربي تجريبي يصف المنتج الرابع."
+    },
+    "9": {
       "name": "ورد جوري",
       "desc": "هذا نص عربي تجريبي يصف المنتج الرابع."
     }
