change text based on changed language

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -79,6 +79,80 @@
     "title": "التكنولوجيا",
     "desc": "أعشاب ونباتات كامبو من أجود أنواع الأعشاب ومطابقة للمواصفات القياسية، طبيعية 100% ، لا تحوي على منكهات صناعية، معقمة بأشعة (UV)  تحت إشراف صيدلاني مخبري."
   },
+  "centerTitle": "مراكز التوزيع داخل سوريا",
+  "centerDesc": "تصدر مجموعة كبور الدولية منتجاتها إلى مختلف المحافظات داخل سوريا، يمكنكم التواصل مع مراكزنا عن طريق الأرقام التالية",
+  "centers": [
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    },
+    {
+      "name": "مركز دمشق",
+      "location": "يبرود,ريف دمشق,سوريا",
+      "phone": "+963 11 9493 / 9381"
+    }
+  ],
   "productDetails": "تفاصيل المنتج",
   "product": {
     "1": {
