add change language in navbar for small device

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,7 @@
     "about": "About",
     "contact": "Contact Us"
   },
+  "language": "Languages",
   "about": {
     "factory": {
       "argentina": {
